<resources>
    <string name="app_name">AAIdrive</string>
    <string name="permlab_accessNotifications">IDrive Notification Access</string>
    <string name="permlab_bindNotificationListenerService">IDrive Notification Access</string>
    <string name="permdesc_accessNotifications">IDrive Notification Access</string>
    <string name="permdesc_bindNotificationListenerService">IDrive Notification Access</string>
    <string name="notification_title">AAIdrive</string>
    <string name="notification_description">Connected to Car</string>
    <string name="notification_description_chassiscode">Connected to %s</string>
    <string name="notification_description_bmw">Connected to BMW</string>
    <string name="notification_description_mini">Connected to Mini</string>
    <string name="notification_shutdown">Shutdown</string>
    <string name="permission_cds_normal">read generic car info</string>
    <string name="permission_cds_personal">read personal car info</string>
    <string name="notification_channel_assistant">Assistant Launcher</string>
    <string name="notification_channel_connection">Car Connection Status</string>
    <string name="notification_channel_donation">Donation Request</string>
    <string name="notification_channel_spotify">Spotify Authorization</string>
    <string name="notification_channel_test">Test Notification</string>
    <string name="notification_channel_map_testing">Map Testing Service</string>
    <string name="navigation_listener_bmw">BMW Navigation</string>
    <string name="navigation_listener_mini">MINI Navigation</string>
    <string name="btn_search">Search</string>
    <string name="lbl_navigation_listener_searching">Searching for destination</string>
    <string name="lbl_navigation_listener_parsefailure">Could not locate destination</string>
    <string name="lbl_navigation_listener_pending">Starting navigation</string>
    <string name="lbl_navigation_listener_success">Success</string>
    <string name="lbl_navigation_listener_unsuccess">Unsuccessful</string>
    <string name="lbl_welcome_heading">Let\'s get you connected</string>
    <string name="lbl_welcome_intro">AAIdrive is an unofficial app to add your phone\'s music apps and other features to your car through the native BMW Apps protocol</string>
    <string name="lbl_welcome_compatible">Most MY2014 or newer BMWs or MINIs equipped with NBT or NBT Evo (based on IDrive 4–6) and an active ConnectedDrive or BMW Online subscription should be compatible</string>
    <string name="lbl_welcome_dependencies">The apps connection to the car depends on the BMW/MINI Connected app or the new MyBMW or Mini app to connect to your car</string>
    <string name="lbl_welcome_complete">AAIdrive also adds a variety of other features to your car, check it out!</string>
    <string name="menu_overview">Overview</string>
    <string name="menu_setup">Setup</string>
    <string name="menu_connection">Connection</string>
    <string name="menu_carinfo">Car Information</string>
    <string name="menu_music">Music</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_assistants">Assistants</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_navigation">Navigation</string>
    <string name="menu_addons">Addons</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support">Support</string>
    <string name="btn_next">Next</string>
    <string name="lbl_overviewpage">AAIdrive integrates some of your phone\'s music apps and your phone\'s notifications into your car over the custom BMW Apps protocol</string>
    <string name="lbl_connectionpage">The apps connection to the car depends on a few pieces, and here are some hints to make sure it\'s working well</string>
    <plurals name="lbl_assistantpage">
        <item quantity="one">Your phone\'s voice assistant is added as a Connected app, in case the car\'s voice input doesn\'t trigger it</item>
        <item quantity="other">Your phone\'s voice assistants are added as a Connected app, in case the car\'s voice input doesn\'t trigger it</item>
    </plurals>
    <string name="lbl_assistantpage_tip">These apps are separate from the car\'s Voice Assistant steering wheel button, which only triggers your phone\'s default assistant and is configured separately</string>
    <string name="lbl_notificationpage">Your incoming notifications can be viewed and interacted with from the car</string>
    <string name="spawn_test_notification">Test Notification</string>
    <string name="message_notifications">Message Notifications</string>
    <string name="notification_popups">Notification Popups</string>
    <string name="notification_popups_passenger">Popups with passenger</string>
    <string name="notification_sound">Play notification sound</string>
    <string name="notification_readout">Speak when viewing notifications</string>
    <string name="notification_readout_popup">Speak new notifications</string>
    <string name="notification_readout_popup_passenger">… with a passenger</string>
    <string name="notification_quickreplies">Quick Replies</string>
    <string name="notification_quickreplies_default">[\"👍\",\"On my way!\",\"Currently in the car\",\"Can\'t text, call me instead\",\"I\'ll call you later\"]</string>
    <string name="lbl_notification_permissions">Access to view notifications</string>
    <string name="lbl_notification_sms_permissions">Access to show SMS pictures</string>
    <string name="lbl_notification_permissions_hint">You may grant notification permissions later and can easily revoke them at any time</string>
    <string name="lbl_ttsUnsupported">TTS is not supported by your car</string>
    <string name="lbl_smsPermission">Grant the SMS permission to view pictures from incoming SMS images in the car. The text itself is always visible.</string>
    <string name="lbl_postNotificationsPermission">Access to show a service notification to stay running while connected to the car</string>
    <string name="lbl_calendarpage">Your calendar can be displayed in the car, offering quick navigation to appointments</string>
    <string name="lbl_calendar_description">Events in the phone\'s calendar as seen in Google Calendar will show up in the car. Any work profile calendar is unavailable.</string>
    <string name="lbl_calendar_enabled">Show calendar</string>
    <string name="lbl_calendar_permissions">Access to view calendar</string>
    <string name="lbl_calendar_xiaomi_installed">Events in Mi Calendar may not be visible in the car</string>
    <string name="lbl_calendar_detailed_events">Hide events without details or locations</string>
    <string name="lbl_calendar_automatic_navigation">Automatically navigate to upcoming appointments</string>
    <string name="lbl_calendar_ignore_visibility">Include events from hidden calendars</string>
    <string name="lbl_calendar_calendars">Calendars:</string>
    <string name="lbl_calendar_calendars_empty">No calendars found</string>
    <string name="lbl_calendar_upcoming_events">Upcoming events:</string>
    <string name="lbl_calendar_upcoming_events_empty">No upcoming events found this month</string>
    <string name="lbl_mapspage">AAIdrive includes a custom map that is rendered internally on the phone and displayed in the car</string>
    <string name="enable_custom_maps">Enable Custom Map</string>
    <string name="enable_map_testing">Show test map</string>
    <string name="lbl_map_bt_hint">Map performance and quality when connected over Bluetooth will be poor</string>
    <string name="lbl_map_phone_gps">Use Phone GPS instead of Car GPS</string>
    <string name="lbl_widescreen_map">Widescreen Map</string>
    <string name="lbl_map_widescreen_unsupported">This setting is not supported by your car, which will always run in fullscreen mode</string>
    <string name="lbl_map_widescreen_crashes">Widescreen mode causes the app connection to be unstable on some cars</string>
    <string name="lbl_map_invert_zoom">Invert zoom direction</string>
    <string name="lbl_map_tilt">Tilt map</string>
    <string name="lbl_map_traffic">Show traffic</string>
    <string name="lbl_map_satellite">Show satellite imagery</string>
    <string name="lbl_map_buildings">Enable 3D buildings</string>
    <string name="gmapStyleLabel">Map Style</string>
    <string name="lbl_mapbox_custom_style">Use a custom Mapbox style url</string>
    <string name="lbl_map_quickdestinations">Favorite nav destinations:</string>
    <string name="lbl_gmap_invalid_apikey">The GMaps API Key is invalid and map functionality will be reduced. Please notify the developer of this bug and watch for an update</string>
    <string name="lbl_mapbox_invalid_token">The Mapbox Token is invalid and map functionality will be reduced. Please notify the developer of this bug and watch for an update</string>
    <string name="lbl_map_testing">Map Testing Service</string>
    <string name="btn_map_testing_zoom_in">Zoom In</string>
    <string name="btn_map_testing_zoom_out">Zoom Out</string>
    <string name="btn_map_testing_move_forward">Move Forward</string>
    <string name="btn_map_testing_steer_left">Steer Left</string>
    <string name="btn_map_testing_steer_right">Steer Right</string>
    <string name="btn_set_location">Set location</string>
    <string name="btn_start_navigation">Start navigation</string>
    <string name="lbl_musicpage">Your phone\'s music apps are selectable as media sources in the car</string>
    <string name="lbl_music_apps">Music Apps</string>
    <string name="musicAppIcon">App Icon</string>
    <string name="musicAppNowPlaying">Now Playing</string>
    <string name="musicAppControllable">Controllable While Running</string>
    <string name="musicAppConnectable">Fully Controllable</string>
    <string name="musicAppBrowseable">Browseable</string>
    <string name="musicAppSearchable">Searchable</string>
    <string name="musicAppUnavailable">Unavailable</string>
    <string name="musicAppHidden">Hidden</string>
    <string name="enable_audio_context">Force Audio Focus over USB connection</string>
    <string name="enable_spotify_layout">Always appear as Spotify app in IDrive5+</string>
    <string name="enable_audioplayer_layout">Prefer legacy compact music interface in IDrive5+</string>
    <string name="txt_setup_bmw_ready">The app is ready to connect to a BMW</string>
    <string name="txt_setup_mini_ready">The app is ready to connect to a Mini</string>
    <string name="txt_setup_bmw_missing">Not ready to connect to a BMW:</string>
    <string name="txt_setup_mini_missing">Not ready to connect to a Mini:</string>
    <string name="txt_setup_bmw_connected_65">BMW Connected 6.5 is installed, which sometimes doesn\'t start the car connection. Try downgrading to 6.4 or upgrading to MyBMW if you encounter problems</string>
    <string name="txt_setup_mini_connected_65">Mini Connected 6.5 is installed, which sometimes doesn\'t start the car connection. Try downgrading to 6.4 or upgrading to the new Mini app if you encounter problems</string>
    <string name="txt_setup_bmw_mine_conflict">Both the BMW Connected and My BMW apps are installed, which might cause connection instability unless connecting over USB</string>
    <string name="txt_setup_mini_mine_conflict">Both the MINI Connected and My MINI apps are installed, which might cause connection instability unless connecting over USB</string>
    <string name="txt_setup_security_missing">Security Service is unreachable:</string>
    <string name="btn_install_bmw">Install BMW Connected</string>
    <string name="btn_install_mini">Install Mini Connected</string>
    <string name="btn_install_bmwclassic">Install BMW Connected Classic</string>
    <string name="btn_install_miniclassic">Install Mini Connected Classic</string>
    <string name="lbl_connection_probe_ips">Try connecting to a car by TCP tunnel</string>
</resources>