<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swNotificationPopup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/notification_popups" />

    <LinearLayout
        android:id="@+id/paneNotificationPopup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="24dp">

        <TextView
            android:id="@+id/txtPopupVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_popupVersion" />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swNotificationPopupPassenger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/notification_popups_passenger" />
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swNotificationSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/notification_sound" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swNotificationReadout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/notification_readout" />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swNotificationReadoutPopup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/notification_readout_popup" />
    <LinearLayout
        android:id="@+id/paneNotificationReadout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="24dp">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swNotificationReadoutPopupPassenger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/notification_readout_popup_passenger" />
    </LinearLayout>

</LinearLayout>