<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- BMW Connection -->
    <LinearLayout
        android:id="@+id/paneBMWMissing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:src="@android:drawable/checkbox_off_background" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_setup_bmw_missing" />
        </LinearLayout>
        <Button
            android:id="@+id/btnInstallBMW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_install_bmw"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/paneBMWReady"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:src="@android:drawable/checkbox_on_background" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_setup_bmw_ready" />
    </LinearLayout>

    <!-- MINI Connection -->
    <LinearLayout
        android:id="@+id/paneMiniMissing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:src="@android:drawable/checkbox_off_background" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_setup_mini_missing" />
        </LinearLayout>
        <Button
            android:id="@+id/btnInstallMini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_install_mini"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/paneMiniReady"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:src="@android:drawable/checkbox_on_background" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_setup_mini_ready" />
    </LinearLayout>

    <!-- Security Service -->
    <LinearLayout
        android:id="@+id/paneSecurityMissing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:src="@android:drawable/checkbox_off_background" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_setup_security_missing" />
        </LinearLayout>
        <Button
            android:id="@+id/btnInstallBMWClassic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_install_bmwclassic"/>
        <Button
            android:id="@+id/btnInstallMiniClassic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_install_miniclassic"/>
    </LinearLayout>

</LinearLayout>