<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data class="MusicAdvancedSettingsBinding">
        <variable
            name="settings"
            type="me.hufman.androidautoidrive.phoneui.viewmodels.MusicAdvancedSettingsModel" />
    </data>
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_connection_probe_ips"
            android:labelFor="@id/txtConnectionProbeIps"
            android:layout_marginBottom="@dimen/settings_vertical_margin" />

        <EditText
            android:id="@+id/txtConnectionProbeIps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@={settings.connectionProbeIps}"
            android:layout_marginBottom="@dimen/settings_vertical_margin"
            android:autofillHints="connection_ip" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swAudioContext"
            android:checked="@={settings.audioContext}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/enable_audio_context"
            android:layout_marginBottom="@dimen/settings_vertical_margin" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swSpotifyLayout"
            android:checked="@={settings.spotifyLayout}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/enable_spotify_layout"
            android:layout_marginBottom="@dimen/settings_vertical_margin" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swAudioplayerLayout"
            android:checked="@={settings.audioplayerLayout}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/enable_audioplayer_layout"
            android:layout_marginBottom="@dimen/settings_vertical_margin" />

    </LinearLayout>
</layout>